--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SGFL - Systeme de gestion de formation en ligne</title>
+    <title>SkillSync - Sync Your Skills, Shape Your Future</title>
   </head>
 
   <body>
